--- a/ui/src/app/connect/components/schema-editor/event-schema/event-schema.component.html
+++ b/ui/src/app/connect/components/schema-editor/event-schema/event-schema.component.html
@@ -20,7 +20,7 @@
 <div fxLayout="row" fxLayoutAlign="center">
     <div fxFlex="0 1 80%">
 
-        <div class="assemblyOptions sp-blue-bg">
+        <div class="assemblyOptions sp-blue-bg" *ngIf="!isLoading && !isError">
             <sp-schema-editor-header
                     [countSelected]="countSelected"
                     [schemaErrorHints]="schemaErrorHints"
