--- a/ui/src/app/core-ui/static-properties/static-runtime-resolvable-tree-input/static-tree-input.component.html
+++ b/ui/src/app/core-ui/static-properties/static-runtime-resolvable-tree-input/static-tree-input.component.html
@@ -27,6 +27,7 @@
     <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="sp-tree">
         <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
             <mat-checkbox color="accent"
+                          [attr.data-cy]="node.nodeName"
                           [checked]="node.selected"
                           (change)="toggleNodeSelection(node)">{{node.nodeName}}
             </mat-checkbox>
@@ -34,12 +35,14 @@
         <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
             <div class="mat-tree-node">
                 <button mat-icon-button matTreeNodeToggle
+                        [attr.data-cy]="'button-' +node.nodeName"
                         [attr.aria-label]="'Toggle ' + node.nodeName">
                     <mat-icon class="mat-icon-rtl-mirror">
                         {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
                     </mat-icon>
                 </button>
                 <mat-checkbox color="accent"
+                              [attr.data-cy]="node.nodeName"
                               [checked]="descendantsAllSelected(node)"
                               [indeterminate]="descendantsPartiallySelected(node)"
                               (change)="toggleAllNodeSelection(node)">{{node.nodeName}}
