--- a/ui/src/app/data-explorer/components/widget/data-explorer-dashboard-widget.component.scss
+++ b/ui/src/app/data-explorer/components/widget/data-explorer-dashboard-widget.component.scss
@@ -86,8 +86,8 @@
     border-radius: 10px;
     padding-left: 10px;
     padding-right: 10px;
-    width: 50px;
+    width: 65px;
     margin-right: 10px;
-    text-align: left;
+    text-align: center;
 }
 
