--- a/ui/src/app/data-explorer/data-explorer.component.html
+++ b/ui/src/app/data-explorer/data-explorer.component.html
@@ -73,6 +73,7 @@
         </sp-data-explorer-dashboard-overview>
         <sp-data-explorer-dashboard-panel fxLayout="column"
                                           #dashboardPanel
+                                          (resetDashboardChanges)="resetDashboardChanges()"
                                           [(editMode)]="editMode"
                                           [dashboard]="selectedDataViewDashboard"
                                           [timeSettings]="selectedDataViewDashboard.dashboardTimeSettings"
