--- a/ui/src/scss/sp/pipeline-element.scss
+++ b/ui/src/scss/sp/pipeline-element.scss
@@ -16,16 +16,16 @@
  *
  */
 
-.pipeline-element-configuration-invalid {
+.pipeline-element-configuration-status {
   position: absolute;
   left: 20px;
-  top: 40px;
+  top: -37px;
   width: 100%;
   height: 100%;
 }
 
 .pi-processor {
-  left: 20px;
+  left: 0px;
 }
 
 .pi-stream {
@@ -33,6 +33,16 @@
 }
 
 .pipeline-element-configuration-invalid-icon {
-  font-size:30pt;
+  font-size:20pt;
   color: red;
+}
+
+.pipeline-element-configuration-modified-icon {
+  font-size:20pt;
+  color: #d3c545;
+}
+
+.pipeline-element-configuration-ok-icon {
+  font-size:20pt;
+  color: #6ab26c;
 }
