[STREAMPIPES-507] Enable toggle for widget edit mode in data explorer

--- a/ui/src/app/data-explorer/components/widget/data-explorer-dashboard-widget.component.html
+++ b/ui/src/app/data-explorer/components/widget/data-explorer-dashboard-widget.component.html
@@ -75,7 +75,7 @@
                         (click)="removeWidget()"
                         matTooltip="Delete widget"
                         *ngIf="editMode && hasDataExplorerDeletePrivileges">
-                    <mat-icon>delete</mat-icon>
+                    <mat-icon>clear</mat-icon>
                 </button>
             </div>
         </div>
