--- a/ui/src/app/data-explorer/components/widget/data-explorer-dashboard-widget.component.html
+++ b/ui/src/app/data-explorer/components/widget/data-explorer-dashboard-widget.component.html
@@ -20,7 +20,8 @@
     <div class="box"
          [ngStyle]='{background: configuredWidget.baseAppearanceConfig.backgroundColor,
          color: configuredWidget.baseAppearanceConfig.textColor,
-         border: currentlyConfiguredWidgetId === configuredWidget._id ? "2px solid var(--color-accent)" : "2px solid " + configuredWidget.baseAppearanceConfig.backgroundColor}'>
+         border: currentlyConfiguredWidgetId === configuredWidget._id ? "2px solid var(--color-accent)" : "2px solid " + configuredWidget.baseAppearanceConfig.backgroundColor}'
+         [attr.data-cy]="'widget-' + configuredWidget.baseAppearanceConfig.widgetTitle">>
         <div class="widget-header h-40">
             <div fxFlex="100" fxLayout="row" fxLayoutAlign="start center" class="widget-header-text">
                 {{ configuredWidget.baseAppearanceConfig.widgetTitle }}
@@ -74,7 +75,8 @@
                         mat-icon-button
                         (click)="removeWidget()"
                         matTooltip="Delete widget"
-                        *ngIf="editMode && hasDataExplorerDeletePrivileges">
+                        *ngIf="editMode && hasDataExplorerDeletePrivileges"
+                        [attr.data-cy]="'remove-' + configuredWidget.baseAppearanceConfig.widgetTitle">
                     <mat-icon>clear</mat-icon>
                 </button>
             </div>
