[STREAMPIPES-507] Refactor data exploerer test cases

--- a/ui/src/app/data-explorer/data-explorer.component.html
+++ b/ui/src/app/data-explorer/data-explorer.component.html
@@ -37,7 +37,8 @@
                     </button>
                     <mat-menu #menu="matMenu">
                         <button mat-menu-item (click)="triggerEditMode()"
-                                *ngIf="!editMode && hasDataExplorerWritePrivileges">
+                                *ngIf="!editMode && hasDataExplorerWritePrivileges"
+                                data-cy="options-edit-dashboard">
                             <mat-icon>edit</mat-icon>
                             <span>Edit dashboard</span>
                         </button>
