[STREAMPIPES-507] Add toggle for fields view in data configuration

--- a/ui/src/app/data-explorer/components/designer-panel/data-settings/field-selection-panel/field-selection-panel.component.scss
+++ b/ui/src/app/data-explorer/components/designer-panel/data-settings/field-selection-panel/field-selection-panel.component.scss
@@ -17,9 +17,16 @@
  */
 
 .field-scroll-panel {
-  max-height: 200px;
+  max-height: 100px;
   overflow-y:auto;
   overflow-x: hidden;
 }
 
+.pull-btn-right {
+  margin-left: auto;
+}
+
+.btn-margin {
+  margin-right:10px;
+}
 
