--- a/ui/src/scss/sp/layout.scss
+++ b/ui/src/scss/sp/layout.scss
@@ -84,6 +84,11 @@
   margin-right: 10px;
 }
 
+.mr-5 {
+  margin-right: 5px;
+}
+
+
 .mr-15 {
   margin-right: 15px;
 }
@@ -96,8 +101,8 @@
   width: 100px;
 }
 
-.w-150-px {
-  width: 150px;
+.w-140-px {
+  width: 140px;
 }
 
 .w-100 {
