--- a/ui/src/app/data-explorer/components/designer-panel/data-settings/field-selection-panel/field-selection-panel.component.html
+++ b/ui/src/app/data-explorer/components/designer-panel/data-settings/field-selection-panel/field-selection-panel.component.html
@@ -17,20 +17,32 @@
   -->
 <div fxLayout="column">
     <div fxLayout="row" fxLayoutAlign="start center">
-        <span class="data-explorer-header">Fields </span>
-        <div fxLayout="row" fxLayoutAlign="start center">
-            <button mat-button mat-raised-button color="accent" class="small-button"
-                    style="margin-right:10px;"
+            <span class="data-explorer-header">Fields </span>
+            <button mat-button mat-raised-button color="accent" class="small-button btn-margin"
                     data-cy="data-explorer-data-set-field-select-all"
                     (click)="selectAllFields()">Select all
             </button>
-            <button mat-button mat-raised-button class="small-button mat-basic"
-                    style="margin-right:10px;"
+            <button mat-button mat-raised-button class="small-button mat-basic btn-margin"
                     (click)="deselectAllFields()">Deselect all
             </button>
-        </div>
+            <button mat-button
+                    mat-icon-button
+                    class="pull-btn-right"
+                    matTooltip="Expand More"
+                    (click)="toggleExpandFields()"
+                    *ngIf="!expandFields">
+                <mat-icon>expand_more</mat-icon>
+            </button>
+            <button mat-button
+                    mat-icon-button
+                    class="pull-btn-right"
+                    matTooltip="Expand Less"
+                    (click)="toggleExpandFields()"
+                    *ngIf="expandFields">
+                <mat-icon>expand_less</mat-icon>
+            </button>
     </div>
-    <div fxLayout="column" class="field-scroll-panel">
+    <div fxLayout="column" [class.field-scroll-panel]="!expandFields">
         <div fxLayout="column"
              *ngFor="let field of sourceConfig.queryConfig.fields">
             <sp-field-selection [field]="field" [sourceConfig]="sourceConfig" [widgetId]="widgetId">
