--- a/ui/src/app/data-explorer/components/designer-panel/data-settings/data-explorer-widget-data-settings.component.scss
+++ b/ui/src/app/data-explorer/components/designer-panel/data-settings/data-explorer-widget-data-settings.component.scss
@@ -61,6 +61,9 @@
   align-items: center;
 }
 
+.plus-icon {
+  vertical-align: text-bottom;
+}
 .data-source-selection-panel .mat-form-field + .mat-form-field {
   margin-left: 8px;
 }
