--- a/ui/src/app/data-explorer/components/widgets/time-series-chart/config/time-series-chart-widget-config.component.html
+++ b/ui/src/app/data-explorer/components/widgets/time-series-chart/config/time-series-chart-widget-config.component.html
@@ -25,8 +25,8 @@
         [currentlyConfiguredWidget]="currentlyConfiguredWidget">
     </sp-select-color-properties>
 
-    <h5>Fine-Tune</h5>
-    <mat-checkbox [(ngModel)]="currentlyConfiguredWidget.visualizationConfig.showSpike" (change)="setShowSpikeProperty($event)">show selected values
+    <h5>Spike mode</h5>
+    <mat-checkbox [(ngModel)]="currentlyConfiguredWidget.visualizationConfig.showSpike" (change)="setShowSpikeProperty($event)">Vertical axis
     </mat-checkbox>
 
 </div>
