[housekeeping] Bump Shepherd dependency to latest version, update interactive tour

--- a/ui/src/scss/main.scss
+++ b/ui/src/scss/main.scss
@@ -26,7 +26,7 @@
 @import '~jsplumb/css/jsplumbtoolkit-defaults.css';
 @import '~ng-prettyjson/dist/ng-prettyjson.min.css';
 @import '~prismjs/themes/prism.css';
-@import '~shepherd.js/dist/css/shepherd-theme-default.css';
+@import '~shepherd.js/dist/css/shepherd.css';
 @import "~@danielmoncada/angular-datetime-picker/assets/style/picker.min.css";
 @import '~leaflet/dist/leaflet.css';
 @import '~material-icons/iconfont/material-icons.css';
