--- a/ui/src/scss/sp/shepherd-new.scss
+++ b/ui/src/scss/sp/shepherd-new.scss
@@ -23,6 +23,14 @@
 .shepherd-element *:before {
   box-sizing: border-box; }
 
+.shepherd-element.shepherd-has-title[data-popper-placement^=bottom]>.shepherd-arrow:before {
+  background-color: $sp-color-accent;
+}
+
+.shepherd-arrow:before {
+  background-color: $sp-color-accent;
+}
+
 .shepherd-element {
   max-height: 100%;
   max-width: 100%;
@@ -356,6 +364,7 @@ pre {
   color: rgba(0, 0, 0, 0.75);
   line-height: 1.3em;
   padding: 0.75em;
+  font-size: 0.9em;
 }
 
 .shepherd-element .shepherd-content .shepherd-text a,
