--- a/ui/src/app/dashboard/components/widgets/stacked-line-chart/stacked-line-chart-widget.component.scss
+++ b/ui/src/app/dashboard/components/widgets/stacked-line-chart/stacked-line-chart-widget.component.scss
@@ -23,7 +23,7 @@
   left: 50%;
   display: flex;
   flex-direction: column;
-  align-content: start;
+  align-content: flex-start;
 }
 
 .title-panel {
