--- a/ui/src/app/data-explorer/components/widgets/utils/too-much-data/too-much-data.component.scss
+++ b/ui/src/app/data-explorer/components/widgets/utils/too-much-data/too-much-data.component.scss
@@ -16,21 +16,7 @@
  *
  */
 
-export class DatalakeQueryParameters {
-  public columns: string;
-  public startDate: number;
-  public endDate: number;
-  public page: number;
-  public limit: number;
-  public offset: number;
-  public groupBy: string;
-  public order: string;
-  public aggregationFunction: string;
-  public timeInterval: string;
-  public countOnly: boolean;
-  public autoAggregate: boolean;
-  public filter: string;
-  public maximumAmountOfEvents: number;
 
+.warning-text {
+  color: var(--color-warn);
 }
-
