[STREAMPIPES-431] Add protect widget from too much data to time series chart

--- a/ui/src/app/data-explorer/components/widgets/time-series-chart/time-series-chart-widget.component.html
+++ b/ui/src/app/data-explorer/components/widgets/time-series-chart/time-series-chart-widget.component.html
@@ -22,7 +22,12 @@
 
         <sp-no-data-in-date-range *ngIf="showNoDataInDateRange" [viewDateRange]="timeSettings"></sp-no-data-in-date-range>
 
-        <plotly-plot *ngIf="data !== undefined && data.length > 0 && !showNoDataInDateRange && !showIsLoadingData"
+        <sp-too-much-data
+                [amountOfEvents]="amountOfTooMuchEvents"
+                (loadDataWithTooManyEventsEmitter)="loadDataWithTooManyEvents()"
+                *ngIf="showTooMuchData"></sp-too-much-data>
+
+        <plotly-plot *ngIf="showData"
                      [divId]="dataExplorerWidget._id"
                      class="plotly-container"
                      [data]="data"
